# PhysicsBoard

./: .gitignore  Board.cpp  Board.h  BoardApp.cpp  BoardApp.h  BoardAppWebSocket.cpp  BoardJson.h  CMakeLists.txt  ExpressionParser.cpp  ExpressionParser.h  FunctionPlotter.cpp  FunctionPlotter.h  IWebSocketServer.h  NetworkSession.cpp  NetworkSession.h  PhysicsToolbox.cpp  PhysicsToolbox.h  ProjectileSimulator.cpp  ProjectileSimulator.h  README.md  UwsWebSocketServer.cpp  UwsWebSocketServer.h  WebSocketServer.cpp  WebSocketServer.h  WinWebSocketServer.cpp  WinWebSocketServer.h  main.cpp  student.html
.github/workflows/: ci.yml
build-linux/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  physicsboard_imgui.ini
cmake/: uwebsockets.cmake
